fix: Dockerfile paths for service build context

--- a/services/api-service/Dockerfile
+++ b/services/api-service/Dockerfile
@@ -2,13 +2,15 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+# copy package.json from the current build context (services/api-service)
 COPY package.json package.json
-
 RUN npm install --production
 
+# copy service source from the current build context
 COPY src src
 
 ENV API_PORT=4000
+ENV NODE_ENV=production
 
 EXPOSE ${API_PORT}
 
