--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18-alpine AS build
 WORKDIR /app
-COPY package.json package.json
-RUN npm ci
+COPY package.json package-lock.json* ./
+RUN if [ -f package-lock.json ]; then npm ci; else npm install; fi
 COPY . .
 RUN npm run build
 
